--- a/_posts/Web/index.html
+++ b/_posts/Web/index.html
@@ -1,9 +1,9 @@
 ---
-layout:index_Django
+layout:index_Web
 ---
 
 <ul>
-    {% for post in site.categories.Django %}
+    {% for post in site.categories.Web %}
         <li><a href="{{post.url}}"> {{post.title}} </li>
     {% endfor %}
 </ul>
